--- a/timer/pomodoro.html
+++ b/timer/pomodoro.html
@@ -11,7 +11,7 @@
             margin: 0; 
             padding: 0; 
             box-sizing: border-box; 
-            background-color: #5ad679;
+            background-color: #6296f0;
         }
 
         
@@ -40,7 +40,7 @@
         }
 
         .timer {
-            background-color: #5ad679;
+            background-color: #6296f0;
             padding: 20px;
             border-radius: 10px;
             text-align: center;
