--- a/timer/stopwatch.html
+++ b/timer/stopwatch.html
@@ -11,7 +11,7 @@
             margin: 0; 
             padding: 0; 
             box-sizing: border-box; 
-            background-color: #5ad679;
+            background-color: #6296f0;
         }
 
         
